--- a/views/Chat.ejs
+++ b/views/Chat.ejs
@@ -15,7 +15,7 @@
 <button id="btn">Send</button>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.4/socket.io.js"></script>
     <script>
-        var socket = io("ws://test2-to63.onrender.com:3000");
+        var socket = io();
         console.log('test');
         socket.on('connection',function(){
         })
